# cpp-Learn

./: README.md  函数占位参数.cpp  函数的重载-注意事项.cpp  函数的重载.cpp
1 内存分区模型/: 全局区.cpp
4 类和对象/4.1 封装/: 封装.cpp  访问权限.cpp
4 类和对象/4.2 对象的初始化和清理/: 构造函数和析构函数.cpp  类对象作为类成员.cpp
4 类和对象/4.3 C++对象模型和this指针/: const修饰成员函数.cpp  this指针的使用.cpp
4 类和对象/4.4 友元/: 全局函数做友元.cpp  成员函数做友元.cpp  类做友元.cpp
4 类和对象/4.5 运算符重载/: tempCodeRunnerFile.cpp  关系运算符重载.cpp  函数调用运算符.cpp  左移运算符重载.cpp  递增运算符重载.cpp
4 类和对象/4.6 继承(重点)/: 多继承语法.cpp  继承中同名静态成员处理.cpp  继承中构造和析构的顺序.cpp  继承中的同名成员处理.cpp  继承中的对象模型.cpp  继承方式.cpp  继承的基本语法.cpp  菱形继承.cpp
4 类和对象/4.7 多态/: 多态案例--计算器类.cpp  多态案例三-电脑组装.cpp  多态案例二--制作饮品.cpp  纯虚函数和抽象类.cpp  虚析构和纯虚析构.cpp
4 类和对象/多态/: 多态的基本概念.cpp
4 类和对象/运算符重载/: tempCodeRunnerFile.cpp  加号运算符重载.cpp  赋值运算符重载.cpp
5 文件操作/5.1 文本文件/: person.txt  readFile.cpp  readFileBinary.cpp  test01.txt  writeFileBinary.cpp  写文件.cpp  读文件.cpp
staffManager/src/staffManager/: StaffManager.cpp
内存分区模型/: 内存四区.cpp  堆.cpp  栈.cpp
类和对象/封装/: 学生类.cpp  点和圆的关系.cpp  私有成员属性.cpp  立方体类.cpp  结构体.cpp
类和对象/封装/C++对象模型和this指针/: 成员变量和成员函数时分开存储的.cpp  空指针访问成员函数.cpp
类和对象/封装/对象的初始化和清理/: 初始化列表.cpp  拷贝构造函数的调用时机.cpp  构造函数的分类及调用.cpp  深拷贝与浅拷贝.cpp  静态成员-静态成员函数.cpp  静态成员-静态成员变量.cpp
职工管理系统/: CMakeLists.txt
职工管理系统/src/: StaffManagementSystem.cpp
职工管理系统/src/staffManager/: staffManager.h
职工管理系统/staffManager/: StaffManager.cpp  staffManager.h
